# algo-edu-recommender

./: LICENSE
backend/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/scripts/: init_knowledge_graph.py
backend/secrets/: jwt-private.pem  jwt-public.pem
backend/src/: config.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: auth.py  graph.py  health.py  knowledge.py  learning.py  review.py  users.py
backend/src/core/: rate_limit.py  security.py
backend/src/db/: neo4j.py  session.py
backend/src/models/: __init__.py  review.py  user.py
backend/src/schemas/: auth.py  knowledge.py  review.py  user.py
backend/src/services/: auth.py  ebbinghaus.py  graph_rag.py  knowledge.py  llm.py  recommendation.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  graph.ts  health.ts  learning.ts  review.ts
frontend/src/components/common/: ErrorMessage.tsx  LoadingSpinner.tsx
frontend/src/components/knowledge/: KnowledgeDetailPanel.tsx  KnowledgeNode.tsx  KnowledgeSearch.tsx  PrerequisiteEdge.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/review/: ReviewCard.tsx  (+1 more)
frontend/src/hooks/: useApi.ts  useAuth.ts
frontend/src/pages/: Dashboard.tsx  KnowledgeGraphPage.tsx  LearningPathPage.tsx  Login.tsx  RecommendPage.tsx  Register.tsx  ReviewCenterPage.tsx  SettingsPage.tsx
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
(+3 files in other folders)
